fix for collapsing images

--- a/tablepress-carousel.less
+++ b/tablepress-carousel.less
@@ -46,6 +46,11 @@
   th {
     overflow: hidden;
   }
+
+  img {
+    width: 100%;
+  }
+
   .carousel-hidden {
     padding: 0;
     margin: 0;
